[project]
name = "comfyui-meancache-z"
version = "0.1.0"
description = "MeanCache: Training-free inference acceleration for Z-Image Flow Matching models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Based on UnicomAI MeanCache research"}
]
keywords = [
    "comfyui",
    "z-image",
    "flow-matching",
    "inference-acceleration",
    "meancache"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
]

[project.urls]
"Homepage" = "https://unicomai.github.io/MeanCache/"
"Repository" = "https://github.com/UnicomAI/MeanCache"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.comfy]
PublisherId = "meancache-z"
DisplayName = "MeanCache Z-Image"
Icon = ""
